@@ -1,3 +1,8 @@
+1/6/2024
+	Added support for fast thermos
+	Added support for forbidden consecutive sums, generalizing no-seven rules.
+		
+
 12/29/2023
 	Added support for shaken clone regions (h/t Bill Murphy...thanks!)
 
